--- a/views/project.html
+++ b/views/project.html
@@ -20,13 +20,13 @@
 <body>
 	<div id="app">
 		<div class="modal">
-			<h2>Načítání videoeditoru</h2>
+			<h2>加载视频编辑器</h2>
 			<div>
 				<div class="loader"></div><br>
-				Pokud se aplikace nenačte, zkuste následující:<br>
-				1. Máte zapnutý JavaScript?<br>
-				2. Máte aktuální prohlížeč?<br>
-				3. Máte rychlé připojení k internetu?
+				如果应用程序未被读取，请尝试以下操作:<br>
+				1. 您已启用JavaScript?<br>
+				2. 刷新浏览器是否正常?<br>
+				3. 网络连接是否正常?
 			</div>
 		</div>
 	</div>
