--- a/views/project.html
+++ b/views/project.html
@@ -352,7 +352,7 @@
 	
 					counter ++;
 					let canvas = renderer.domElement;
-					
+					cut_canvas(canvas);
 					renderer.clear();
 					composer.render();
 	
