--- a/views/project.html
+++ b/views/project.html
@@ -262,7 +262,7 @@
 							if(this.p.cb)this.p.cb(new Uint8Array(this.result));
 						}
 					};
-					this.readers[this.readers.length]=_r;
+					readers[readers.length]=_r;
 					return _r;
 				}
 				var blobToArray=function(b,cb){
