--- a/views/project.html
+++ b/views/project.html
@@ -189,7 +189,9 @@
 					window.addEventListener( 'resize', onWindowResize, false );
 					
 					scene.onAfterRender = function(_renderer, scene, camera, geometry, material, group){
-						let canvas = renderer.domElement;
+						// let canvas = renderer.domElement;
+						let canvas = container.querySelector('canvas');
+						console.log("querySelector canvas!");
 						cut_canvas(canvas);
 					};
 	
@@ -279,7 +281,7 @@
 				};
 				var file = function(buffer){
 					this.defaults = {
-					    ext              : 'jpg',
+					    ext              : 'png',
 					    remoteFileName   : 'test',
 					    localUrl         : null,
 					    localFile        : buffer,
