window.rend = renderer;

--- a/views/project.html
+++ b/views/project.html
@@ -196,6 +196,7 @@
 						cut_canvas(canvas);
 					};
 					window.three_con = container;
+					window.rend = renderer;
 				}
 	
 				function onWindowResize() {
