--- a/views/project.html
+++ b/views/project.html
@@ -110,7 +110,8 @@
 					
 					renderer.autoClear = false;
 					
-					effects = new Effects(container, "风塘美术");
+					// effects = new Effects(container, "风塘美术");
+					effects = new Effects(container, "FengTangMeiShu");
 					effects.init(scene, camera, renderer);
 				}
 	
