--- a/views/project.html
+++ b/views/project.html
@@ -42,7 +42,7 @@
 				playing <a href="http://durian.blender.org/" target="_blank" rel="noopener">sintel</a> trailer
 			</div>
 	
-	<video id="video" loop crossOrigin="anonymous" playsinline style="display:" muted>
+	<video id="video" loop crossOrigin="anonymous" playsinline style="display:none;" muted>
 		<source src="/three/textures/sintel.ogv" type='video/ogg; codecs="theora, vorbis"'>
 		<source src="/three/textures/sintel.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
 	</video>
