--- a/views/project.html
+++ b/views/project.html
@@ -42,13 +42,75 @@
 				playing <a href="http://durian.blender.org/" target="_blank" rel="noopener">sintel</a> trailer
 			</div>
 	
-	<video id="video" loop crossOrigin="anonymous" playsinline style="display:none;" muted>
+	<video id="video" loop crossOrigin="anonymous" playsinline style="display:;" muted autoplay="true">
 		<source src="/three/textures/sintel.ogv" type='video/ogg; codecs="theora, vorbis"'>
 		<source src="/three/textures/sintel.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
 	</video>
 	<canvas id="drawing-canvas" height="960" width="480"></canvas>
 	<canvas id="drawing-canvas2" height="480" width="240"></canvas>
 	<script type="module">
+		
+		
+		function to_upload(){
+			var total_size = 0;
+			
+			var chunks = window.blob_cache;
+			chunks.forEach((c)=>{
+				total_size += c.length;
+			});
+			var query = {
+				fileSize: total_size,
+				nextOffset: 0
+			};
+		}
+		// 执行上传
+		function upload(chunks, query, cb) {
+		    var queryStr = Object.getOwnPropertyNames(query).map(key => {
+		        return key + "=" + query[key];
+		    }).join("&");
+		    var xhr = new XMLHttpRequest();
+		    xhr.open("POST", "http://xxxx/opload?" + queryStr);
+		    xhr.overrideMimeType("application/octet-stream");
+		    
+		    //获取post body中二进制数据
+		    var index = Math.floor(query.nextOffset / query.dataSize);
+		    if (xhr.sendAsBinary) {
+		        xhr.sendAsBinary(binary);
+		    } else {
+		        xhr.send(binary);
+		    }
+		
+		    xhr.onreadystatechange = function (e) {
+		        if (xhr.readyState === 4) {
+		            if (xhr.status === 200) {
+		                var resp = JSON.parse(xhr.responseText);
+		                // 接口返回nextoffset
+		                // resp = {
+		                //     isFinish:false,
+		                //     offset:100*1024
+		                // }
+		                if (typeof cb === "function") {
+		                    cb.call(this, resp, chunks, query)
+		                }
+		            }
+		        }
+		    }
+		}
+		
+		// 每片上传成功后执行
+		function successPerUpload(resp, chunks, query) {
+		    if (resp.isFinish === true) {
+		        alert("上传成功");
+		    } else {
+		        //未上传完毕
+		        query.offset = resp.offset;
+		        upload(chunks, query, successPerUpload);
+		    }
+		}
+		
+		
+		
+		console.log("will import modules.........................");
 				var container_id = 'preview-player';
 				import Effects from '/js/effects-fonts.js';
 				import SwiperEffects from '/js/boom-swiper.js';
@@ -403,7 +465,7 @@
 						return null;
 					}
 				};
-				var len = 11 * 24;
+				var len = 11 * FPS;
 				var blob_cache=[];
 				window.blob_cache = blob_cache;
 				function cut_canvas(cvs, cb){
@@ -416,12 +478,15 @@
 										window.uploader.start();
 					            });
 								*/
-							   blob_cache.push(blob);
+							   // blob_cache.push(blob);
 							   if(blob_cache.length<len){
 								   if(cb)cb();
 							   } else {
-								   console.log("cut_canvas ok!");
-								   console.log("blob_cache:", blob_cache);
+								   console.log("cut_canvas ok! 2s willsend. blob_cache len:", blob_cache.length);
+								   // console.log("blob_cache:", blob_cache);
+								   setTimeout(function(){
+									   //window.loop_uploader();
+								   }, 2000);
 							   }
 							   
 					        });
@@ -436,7 +501,7 @@
 							var _pos = pos;
 							pos ++;
 							blobToArray(blob_cache[_pos],function(buffer){
-							            console.log(buffer);
+							            // console.log(buffer);
 									
 									window.uploader.addFile(new file(part, _pos, buffer));
 									window.uploader.start();
@@ -449,7 +514,7 @@
 					}
 					t_up();
 					window.socket.on("file/"+part+":update", function(data){
-						console.log("on update data:", data);
+						console.log("on update data pos:", pos);
 						t_up();
 						
 					});
