--- a/views/project.html
+++ b/views/project.html
@@ -101,12 +101,14 @@
 			console.log("u url:", u);
 			var fd = new FormData();
 			fd.append("file", bdata, fn);
+			console.log("formdata:", fd);
+			var headers = {
+			    // "Content-Type": "multipart/form-data"
+			}
 			fetch(u,{ 
 			    method :"POST",
 			    body: fd,
-			    headers:{
-			        "Content-Type": "multipart/form-data"
-			    } 
+			    headers:headers
 			}).then(response => response.json())
 			.then(data => {
 				if (typeof data.err === 'undefined') {
