--- a/views/project.html
+++ b/views/project.html
@@ -103,7 +103,7 @@
 			fd.append("file", bdata, fn);
 			console.log("formdata:", fd);
 			var headers = {
-			    "Content-Type": "multipart/form-data; boundary=----"
+			    // "Content-Type": "multipart/form-data"
 			}
 			fetch(u,{ 
 			    method :"POST",
