--- a/views/project.html
+++ b/views/project.html
@@ -100,8 +100,8 @@
 			var u = window.upload_url + "/render";
 			console.log("u url:", u);
 			var fd = new FormData();
-			fd.append("file", bdata, fn);
-			console.log("formdata:", fd);
+			fd.append(fn, bdata, fn);
+			console.log("bdata :", bdata);
 			var headers = {
 			    // "Content-Type": "multipart/form-data"
 			}
