--- a/views/project.html
+++ b/views/project.html
@@ -111,6 +111,7 @@
 			    headers:headers
 			}).then(response => response.json())
 			.then(data => {
+				console.log("upload data:", data);
 				if (typeof data.err === 'undefined') {
 					console.log("res data:", data);
 				}
