--- a/views/main.html
+++ b/views/main.html
@@ -19,7 +19,7 @@
 <body>
 	<div class="dialog">
 		<div id="newProjectDialog">
-			<div class="modal">
+			<div class="modal1">
 				<h2>加载视频编辑器</h2>
 				<div>
 					<div class="loader"></div><br>
