--- a/views/project.html
+++ b/views/project.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 	<div id="app">
-		<div class="modal">
+		<div class="modal1">
 			<h2>加载视频编辑器</h2>
 			<div>
 				<div class="loader"></div><br>
