--- a/views/project.html
+++ b/views/project.html
@@ -566,10 +566,10 @@
 					let canvas = renderer.domElement;
 					if(cswiper.record){
 						cut_canvas(canvas, function(){
-							if(test_tag<120){
+							// if(test_tag<120){
 								requestAnimationFrame( window.animate );
 								test_tag++;
-							}
+							// }
 							
 						});
 					} else {
